[workspace]
members = [".", "client", "proc-macro", "test-node"]

[package]
name = "substrate-subxt"
version = "0.13.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = []
client = ["substrate-subxt-client"]

# enable this feature to run tests which require a local dev chain node
integration-tests = []

[dependencies]
hex = "0.4.2"

substrate-subxt-client = { version = "0.5.0", path = "client", optional = true }
substrate-subxt-proc-macro = { version = "0.13.0", path = "proc-macro" }
log = "0.4.11"
thiserror = "1.0.20"
futures = "0.3.5"
jsonrpsee = { version = "0.1.0", features = ["ws"] }
num-traits = { version = "0.2.12", default-features = false }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
url = "2.1.1"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"] }
sp-consensus-babe = "0.9.0"

[dependencies.frame-metadata]
git = 'https://github.com/equilibrium-eosdt/substrate'
version = '13.0.0'
branch="v3.0.0eq"

[dependencies.frame-support]
git = 'https://github.com/equilibrium-eosdt/substrate'
version = '3.0.0'
branch="v3.0.0eq"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
git = 'https://github.com/equilibrium-eosdt/substrate'
package = 'pallet-transaction-payment-rpc-runtime-api'
version = '3.0.0'
branch="v3.0.0eq"

[dependencies.sp-runtime]
git = 'https://github.com/equilibrium-eosdt/substrate'
version = '3.0.0'
branch="v3.0.0eq"

[dependencies.sp-version]
git = 'https://github.com/equilibrium-eosdt/substrate'
version = '3.0.0'
branch="v3.0.0eq"

[dependencies.pallet-indices]
git = 'https://github.com/equilibrium-eosdt/substrate'
version = '3.0.0'
branch="v3.0.0eq"

[dependencies.sp-rpc]
default-features = false
git = 'https://github.com/equilibrium-eosdt/substrate'
version = '3.0.0'
branch="v3.0.0eq"

[dependencies.sp-core]
default-features = false
git = 'https://github.com/equilibrium-eosdt/substrate'
version = '3.0.0'
branch="v3.0.0eq"

[dependencies.sc-rpc-api]
default-features = false
git = 'https://github.com/equilibrium-eosdt/substrate'
version = '0.9.0'
branch="v3.0.0eq"

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/equilibrium-eosdt/substrate'
version = '3.0.0'
branch="v3.0.0eq"

[dependencies.sp-std]
default-features = false
git = 'https://github.com/equilibrium-eosdt/substrate'
version = '3.0.0'
branch="v3.0.0eq"

[dependencies.sp-application-crypto]
default-features = false
git = 'https://github.com/equilibrium-eosdt/substrate'
version = '3.0.0'
branch="v3.0.0eq"

#[dependencies.sp-finality-grandpa]
#default-features = false
#git = 'https://github.com/equilibrium-eosdt/substrate'
#version = '3.0.0'
#branch="v3.0.0eq"

#[dependencies.sp-authority-discovery]
#default-features = false
#git = 'https://github.com/equilibrium-eosdt/substrate'
#version = '3.0.0'
#branch="v3.0.0eq"

#[dependencies.pallet-im-online]
#default-features = false
#git = 'https://github.com/equilibrium-eosdt/substrate'
#version = '3.0.0'
#branch="v3.0.0eq"

#[dependencies.pallet-staking]
#default-features = false
#git = 'https://github.com/equilibrium-eosdt/substrate'
#version = '3.0.0'
#branch="v3.0.0eq"

[dev-dependencies]
async-std = { version = "1.6.4", features = ["attributes"] }
env_logger = "0.7.1"
frame-system = { version = "3.0.0", package = "frame-system" }
pallet-balances = { version = "3.0.0", package = "pallet-balances" }
sp-keyring = { version = "3.0.0", package = "sp-keyring" }
substrate-subxt-client = { version = "0.5.0", path = "client" }
tempdir = "0.3.7"
test-node = { path = "test-node" }
wabt = "0.10.0"
assert_matches = "1.3"
