[workspace]
members = [".", "client", "proc-macro"]

[package]
name = "substrate-subxt"
version = "0.15.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = ["tokio1"]
client = ["substrate-subxt-client"]
# jsonrpsee can be configured to use tokio02 or tokio1.
tokio02 = ["jsonrpsee-http-client/tokio02", "jsonrpsee-ws-client/tokio02"]
tokio1 = ["jsonrpsee-http-client/tokio1", "jsonrpsee-ws-client/tokio1"]

[dependencies]
hex = "0.4.2"
async-trait = "0.1.49"
dyn-clone = "1.0.4"

jsonrpsee-proc-macros = "0.2.0"
jsonrpsee-ws-client = { version = "0.2.0", default-features = false }
jsonrpsee-http-client = { version = "0.2.0", default-features = false }
jsonrpsee-types = "0.2.0"

substrate-subxt-client = { version = "0.7.0", path = "client", optional = true }
substrate-subxt-proc-macro = { version = "0.15.0", path = "proc-macro" }
log = "0.4.11"
thiserror = "1.0.20"
futures = "0.3.5"
jsonrpsee = { version = "0.1.0", features = ["ws"] }
num-traits = { version = "0.2.12", default-features = false }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
url = "2.1.1"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"] }
sp-consensus-babe = {version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4"}

[dependencies.frame-metadata]
git = 'https://github.com/paritytech/substrate'
version = '13.0.0'
branch="polkadot-v0.9.4"

[dependencies.frame-support]
git = 'https://github.com/paritytech/substrate'
version = '3.0.0'
branch="polkadot-v0.9.4"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
git = 'https://github.com/paritytech/substrate'
package = 'pallet-transaction-payment-rpc-runtime-api'
version = '3.0.0'
branch="polkadot-v0.9.4"

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate'
version = '3.0.0'
branch="polkadot-v0.9.4"

[dependencies.sp-version]
git = 'https://github.com/paritytech/substrate'
version = '3.0.0'
branch="polkadot-v0.9.4"

[dependencies.pallet-indices]
git = 'https://github.com/paritytech/substrate'
version = '3.0.0'
branch="polkadot-v0.9.4"

[dependencies.sp-rpc]
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '3.0.0'
branch="polkadot-v0.9.4"

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '3.0.0'
branch="polkadot-v0.9.4"

[dependencies.sc-rpc-api]
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '0.9.0'
branch="polkadot-v0.9.4"

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '3.0.0'
branch="polkadot-v0.9.4"

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '3.0.0'
branch="polkadot-v0.9.4"

[dependencies.sp-application-crypto]
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '3.0.0'
branch="polkadot-v0.9.4"

[dev-dependencies]

assert_matches = "1.5.0"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
env_logger = "0.8.3"
tempdir = "0.3.7"
wabt = "0.10.0"
which = "4.0.2"

